--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1141,7 +1141,7 @@ LeadScreen As screen:
                             Fill: =RGBA(54, 176, 75, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            OnSelect: |-
+                            OnSelect: |
                                 =//here checking estimate number is entered or not
                                 If(
                                     IsBlank(txtinptestimatenumber.Text),
@@ -1155,59 +1155,62 @@ LeadScreen As screen:
                                     )
                                 );
                                 //here checking entered estimate number is present in FP file or not
-                                If(FlagEstimateNumberEntered=true,
                                 If(
-                                    !IsBlank(
-                                        LookUp(
-                                            SHFPEstimates,
-                                            Estimate = txtinptestimatenumber.Text
-                                        )
-                                    ),
-                                    Set(
-                                        FlagEstimateNumberFound,
-                                        true
+                                    FlagEstimateNumberEntered = true,
+                                    If(
+                                        !IsBlank(
+                                            LookUp(
+                                                SHFPEstimates,
+                                                Estimate = txtinptestimatenumber.Text
+                                            )
+                                        ),
+                                        Set(
+                                            FlagEstimateNumberFound,
+                                            true
+                                        );
+                                        Set(
+                                            VarBidPrice,
+                                            LookUp(
+                                                SHFPEstimates,
+                                                Estimate = txtinptestimatenumber.Text,
+                                                BidPrice
+                                            )
+                                        );
+                                        Set(
+                                            VarLeadGeneratorId,
+                                            LookUp(
+                                                SHFPEstimates,
+                                                Estimate = txtinptestimatenumber.Text,
+                                                'Lead Generator Id'
+                                            )
+                                        ),
+                                        Notify("Estimate number not found in the FP Estimate file.")
                                     );
-                                    Set(
-                                        VarBidPrice,
-                                        LookUp(
-                                            SHFPEstimates,
-                                            Estimate = txtinptestimatenumber.Text,
-                                            BidPrice
-                                        )
-                                    );
-                                    Set(
-                                        VarLeadGeneratorId,
-                                        LookUp(
-                                            SHFPEstimates,
-                                            Estimate = txtinptestimatenumber.Text,
-                                            'Lead Generator Id'
-                                        )
-                                    ),
-                                    Notify("Estimate number not found in the FP Estimate file.")
-                                );
+                                    
                                 );
                                 //here checking FlagEstimateNumberEntered & FlagEstimateNumberFound is true then update estimate number,leadprice,leadincentive
-                                If(FlagEstimateNumberEntered=true && FlagEstimateNumberFound=true,
-                                UpdateIf(
-                                            LeadInformations,
-                                            ID = VarSelectedLeadId,
-                                            {
-                                                LeadEstimateNumber: txtinptestimatenumber.Text,
-                                                LeadStatus: "Quoted",
-                                                'LeadPrice ': LookUp(
-                                                    SHFPEstimates,
-                                                    Estimate = txtinptestimatenumber.Text,
-                                                    BidPrice
-                                                ),
-                                                LeadIncentive: LookUp(
-                                                    SHFPEstimates,
-                                                    Estimate = txtinptestimatenumber.Text,
-                                                    BidPrice
-                                                ) * 0.02,TechnicianID:VarLeadGeneratorId
-                                
-                                            }
-                                        );
-                                
+                                If(
+                                    FlagEstimateNumberEntered = true && FlagEstimateNumberFound = true,
+                                    UpdateIf(
+                                        LeadInformations,
+                                        ID = VarSelectedLeadId,
+                                        {
+                                            LeadEstimateNumber: txtinptestimatenumber.Text,
+                                            LeadStatus: "Quoted",
+                                            'LeadPrice ': LookUp(
+                                                SHFPEstimates,
+                                                Estimate = txtinptestimatenumber.Text,
+                                                BidPrice
+                                            ),
+                                            LeadIncentive: LookUp(
+                                                SHFPEstimates,
+                                                Estimate = txtinptestimatenumber.Text,
+                                                BidPrice
+                                            ) * 0.02,
+                                            TechnicianID: VarLeadGeneratorId
+                                        }
+                                    );
+                                    
                                 );
                             Text: ="Submit Estimate Number"
                             Width: =300
